--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -109,6 +109,7 @@ black:
   fedora: [black]
   gentoo: [dev-python/black]
   nixos: [pythonPackages.black]
+  openembedded: [python3-black]
   ubuntu:
     '*': [black]
     bionic: null
@@ -5361,6 +5362,7 @@ python3-construct:
   fedora: [python3-construct]
   gentoo: [dev-python/construct]
   nixos: [python3Packages.construct]
+  openembedded: [python3-construct@meta-ros2]
   rhel:
     '*': [python3-construct]
     '7': null
@@ -5519,6 +5521,7 @@ python3-distro:
   fedora: [python3-distro]
   gentoo: [dev-python/distro]
   nixos: [python3Packages.distro]
+  openembedded: [python3-distro@meta-python]
   ubuntu: [python3-distro]
 python3-distutils:
   debian:
@@ -5806,6 +5809,7 @@ python3-fiona:
   debian: [python3-fiona]
   fedora: [python3-fiona]
   nixos: [python3Packages.fiona]
+  openembedded: [python3-fiona]
   rhel:
     '*': [python3-fiona]
     '7': null
@@ -6217,6 +6221,7 @@ python3-git:
   fedora: [python3-GitPython]
   gentoo: [dev-python/git-python]
   nixos: [python3Packages.GitPython]
+  openembedded: [python3-git@openembedded-core]
   rhel:
     '*': [python3-GitPython]
     '7': null
@@ -6457,6 +6462,7 @@ python3-img2pdf:
   fedora: [python3-img2pdf]
   gentoo: [media-gfx/img2pdf]
   nixos: [python3Packages.img2pdf]
+  openembedded: [python3-img2pdf@meta-ros-common]
   opensuse: [python3-img2pdf]
   rhel:
     '*': [python3-img2pdf]
@@ -6584,6 +6590,7 @@ python3-jinja2:
   fedora: [python3-jinja2]
   gentoo: [=dev-python/jinja-2*]
   nixos: [python3Packages.jinja2]
+  openembedded: [python3-jinja2@openembedded-core]
   rhel:
     '*': [python3-jinja2]
     '7': [python36-jinja2]
@@ -6614,6 +6621,7 @@ python3-jsonschema:
   fedora: [python3-jsonschema]
   gentoo: [dev-python/jsonschema]
   nixos: [python3Packages.jsonschema]
+  openembedded: [python3-jsonschema@openembedded-core]
   rhel:
     '*': [python3-jsonschema]
     '7': [python36-jsonschema]
@@ -7028,6 +7036,7 @@ python3-natsort:
   fedora: [python3-natsort]
   gentoo: [dev-python/natsort]
   nixos: [python3Packages.natsort]
+  openembedded: [python3-natsort@meta-python]
   opensuse: [python3-natsort]
   rhel: [python3-natsort]
   ubuntu: [python3-natsort]
@@ -7112,6 +7121,7 @@ python3-ntplib:
   fedora: [python3-ntplib]
   gentoo: [dev-python/ntplib]
   nixos: [python3Packages.ntplib]
+  openembedded: [python3-ntplib@meta-python]
   opensuse: [python3-ntplib]
   rhel:
     '*': ['python%{python3_pkgversion}-ntplib']
@@ -7494,6 +7504,7 @@ python3-ply:
   fedora: [python3-ply]
   gentoo: [dev-python/ply]
   nixos: [python3Packages.ply]
+  openembedded: [python3-ply@openembedded-core]
   opensuse: [python3-ply]
   rhel:
     '*': [python3-ply]
@@ -7592,6 +7603,7 @@ python3-protobuf:
   fedora: [python3-protobuf]
   gentoo: [dev-python/protobuf-python]
   nixos: [python3Packages.protobuf]
+  openembedded: [python3-protobuf@meta-python]
   rhel:
     '*': [python3-protobuf]
     '7': null
@@ -7706,6 +7718,7 @@ python3-pydantic:
       pip: [pydantic]
   fedora: [python3-pydantic]
   gentoo: [dev-python/pydantic]
+  openembedded: [python3-pydantic]
   ubuntu:
     '*': [python3-pydantic]
     bionic:
@@ -7874,6 +7887,7 @@ python3-pymap3d:
     buster: null
     stretch: null
   gentoo: [sci-geosciences/pymap3d]
+  openembedded: [python3-pymap3d]
   ubuntu:
     '*': [python3-pymap3d]
     bionic: null
@@ -8517,6 +8531,7 @@ python3-rtree:
   fedora: [python3-rtree]
   gentoo: [sci-libs/rtree]
   nixos: [python3Packages.Rtree]
+  openembedded: [python3-rtree]
   rhel:
     '*': [python3-rtree]
     '7': null
@@ -8555,6 +8570,7 @@ python3-scipy:
   gentoo: [sci-libs/scipy]
   macports: [py37-scipy]
   nixos: [python3Packages.scipy]
+  openembedded: [python3-scipy@meta-scipy]
   opensuse: [python3-scipy]
   osx:
     pip:
@@ -8683,6 +8699,7 @@ python3-shapely:
   fedora: [python3-shapely]
   gentoo: [sci-libs/Shapely]
   nixos: [python3Packages.shapely]
+  openembedded: [python3-shapely]
   osx:
     pip:
       packages: [shapely]
@@ -9250,6 +9267,7 @@ python3-typeguard:
   fedora: [python3-typeguard]
   gentoo: [dev-python/typeguard]
   nixos: [python3Packages.typeguard]
+  openembedded: [python3-typeguard@meta-python]
   osx:
     pip:
       packages: [typeguard]
@@ -9335,6 +9353,7 @@ python3-unidiff:
   fedora: [python3-unidiff]
   gentoo: [dev-python/unidiff]
   nixos: [python3Packages.unidiff]
+  openembedded: [python3-unidiff@meta-python]
   opensuse: [python-unidiff]
   rhel: [python3-unidiff]
   ubuntu: [python3-unidiff]
@@ -9372,6 +9391,7 @@ python3-uvloop:
   fedora: [python3-uvloop]
   gentoo: [dev-python/uvloop]
   nixos: [python3Packages.uvloop]
+  openembedded: [python3-uvloop]
   ubuntu: [python3-uvloop]
 python3-vcstool:
   alpine: [vcstool]
@@ -9382,6 +9402,7 @@ python3-vcstool:
     pip:
       packages: [vcstool]
   nixos: [vcstool]
+  openembedded: [python3-vcstool]
   osx:
     pip:
       packages: [vcstool]
@@ -9402,6 +9423,7 @@ python3-venv:
   fedora: [python3-libs]
   gentoo: [dev-lang/python]
   nixos: [python3]
+  openembedded: [python3]
   opensuse: [python3-virtualenv]
   osx:
     pip:
@@ -9440,6 +9462,7 @@ python3-watchdog:
   fedora: [python3-watchdog]
   gentoo: [dev-python/watchdog]
   nixos: [python3Packages.watchdog]
+  openembedded: [python3-watchdog@meta-python]
   ubuntu: [python3-watchdog]
 python3-waymo-open-dataset-tf-2-6-0-pip:
   debian:
@@ -9517,7 +9540,7 @@ python3-whichcraft:
   fedora: [python3-whichcraft]
   gentoo: [dev-python/whichcraft]
   nixos: [python3Packages.whichcraft]
-  openembedded: [python3-whichcraft@meta-ros-common]
+  openembedded: [python3-whichcraft@meta-ros2]
   rhel:
     '*': [python3-whichcraft]
     '7': null
